--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Literature -- Collections'
 - !lcc 'PN'
+- GITenberg
 title: "Every Girl's Library, Volume 8 of 10\r\nA Collection of Appropriate and Instructive\
   \ Reading for Girls of All Ages from the Best Authors of All Time"
 url: http://www.gutenberg.org/ebooks/40063
